# kalshi

./: .env  .env.example  .gitignore  ARBITRAGE_PROFIT_ANALYSIS_REPORT.md  Dockerfile  ENHANCED_INFRASTRUCTURE.md  PRICE_DISCREPANCY_FINAL_REPORT.md  README.md  analyze_nba_game.py  analyze_price_discrepancies.py  arbitrage_analyzer.py  claude.md  docker-compose.yml  main.py  price_discrepancies_20250726_155149.json  pyproject.toml  pytest.ini  realtime_arb.py  requirements.txt  run_arbitrage.py  simple_price_check.py  study_players.py  study_substitutions.py  venue_fees.py  websocket_client.py  worklog.md  writeup.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  research-heartbeat.yml  (+1 more)
.ipynb_checkpoints/: arbitrage_bot-checkpoint.ipynb  arbitrage_bot_refactored-checkpoint.ipynb  requirements-checkpoint.txt
debug/: check_polymarket_fields.py  check_specific_prices.py  debug_arbitrage.py  test_polymarket_api.py
demos/: demo_lossless_complete.py
deploy/: Dockerfile  README.md  docker-compose.yml  kalshi-arb-shadow.service  kalshi-arb.logrotate  run_shadow.sh
docs/: CODEBASE_AUDIT_2026-06-12.md  EXECUTION.md  MACHINE.md  NEXT_GEN.md  PRE_ARM_CHECKLIST.md
kalshi_arbitrage/: __init__.py  api_clients.py  arbitrage_engine.py  arbitrage_executor.py  cache_manager.py  circuit_breaker.py  cli.py  config.py  confirmed_pnl.py  data_normalizer.py  enhanced_websocket_client.py  kalshi_executor.py  live_probe.py  market_analyzer.py  mock_execution.py  monitoring.py  pmus.py  polymarket_executor.py  realtime_scanner.py  reconcile.py  risk_engine.py  snapshot_store.py  utils.py  websocket_client.py  ws_books.py
market_data/: arbitrage_opportunities.json  cost_calibration.json  scan_report_2025-06-15T21-26-01.json  scan_report_2025-06-15T22-41-42.json  scan_report_2025-06-15T23-11-24.json  scan_report_2025-06-15T23-50-11.json  scan_report_2025-06-18T00-01-50.json  splits.json
nba_odds_study/: __init__.py  analysis.py  dataset.py  kalshi_hist.py  pm_trades.py  polymarket_hist.py  schedule.py  teams.py  wp_impact.py
ops/: APEX_PROTOCOL.md  apex_beat_prompt.md  controller.py  governor.py  install_launchd.sh  usage_meter.py  usage_profile.py
research/: ALPHA_FINDINGS.md  CLV_FINDINGS.md  DIAGNOSTIC_1.md  DIAGNOSTIC_2.md  README.md  SPREADS_FINDINGS.md  TERM_STRUCTURE_FINDINGS.md  TOTALS_EXTREMES_FINDINGS.md  TOTALS_REFINE_FINDINGS.md  cache_io.py  eda_kit.py
tests/: conftest.py  test_all_methods.py  test_arb_matching_lineage.py  test_arb_ws5.py  test_arbitrage_engine.py  test_arbitrage_hedge.py  test_capture_estimate_scaling.py  test_cli.py  test_cli_pnl_output.py  test_complementary_pnl.py  test_confirmed_pnl_reporting.py  test_confirmed_pnl_tracker.py  test_enhanced_infrastructure.py  test_execution_engine.py  test_full_capture.py  test_guaranteed_pnl_reporting.py  test_kalshi_field_migration.py  test_ledger_honesty.py  test_live_arbitrage_analysis.py  test_live_detection.py  test_live_lock.py  test_live_pilot.py  test_live_probe.py  test_live_reconciliation.py  test_llm_tiebreaker.py  test_lossless.py  test_machine_tools.py  test_match_verification.py  test_matching_audit.py  test_matching_backtest.py  test_matching_corpus.py  test_matching_precision_regression.py  test_matching_verification.py  test_opportunity_mapper.py  test_orderbook_quality_controls.py  test_paper_capture.py  test_phase2_realtime.py  test_pmus.py  test_polymarket_data_quality.py  test_polymarket_executor_v2.py  (+10 more)
tools/: __init__.py  analyze_ledger.py  audit_candidates.py  backtest_arb.py  backtest_strategies.py  detailed_search.py  diagnose_matches.py  dry_run_execution.py  find_live_arb.py  monitor_arb.py  oracle_label.py  polymarket_us_cli.py  probe_economics.py  probe_overlap.py  review_pairs.py  run_machine.py  search_markets.py  sim_pilot_acceptance.py  simulate_24h.py  simulate_24h_v2.py
(+302 files in other folders)
