[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-arbitrage"
version = "0.1.0"
description = "Kalshi-Polymarket cross-venue arbitrage detection and (gated) execution"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "python-dotenv>=0.19.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.0",
    "py-clob-client>=0.1.0",
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
# Heavier / optional extras not needed just to run a paper scan.
viz = ["matplotlib>=3.5.0", "seaborn>=0.11.0"]
cache = ["redis>=4.2.0"]
research = ["pyarrow>=12.0.0", "duckdb>=0.9.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
# Installs a `kalshi-arb` command on PATH after `pip install -e .`
kalshi-arb = "kalshi_arbitrage.cli:main"

[tool.setuptools]
# Top-level modules + packages that ship with the project.
py-modules = ["arbitrage_analyzer"]

[tool.setuptools.packages.find]
include = ["kalshi_arbitrage*", "tools*"]
exclude = ["research*", "tests*", "market_data*", "debug*", "nba_odds_study*"]
