[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-arbitrage"
version = "0.1.0"
description = "Kalshi-Polymarket cross-venue arbitrage detection and (gated) execution"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "python-dotenv>=0.19.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.0",
    # CLOB V2 (live 2026-04-28): legacy py-clob-client is archived and cannot
    # trade against production; py-clob-client-v2 is the official successor.
    "py-clob-client-v2>=1.0.1",
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
# Heavier / optional extras not needed just to run a paper scan.
viz = ["matplotlib>=3.5.0", "seaborn>=0.11.0"]
cache = ["redis>=4.2.0"]
# Everything the research/ suite (and the arb tests that lean on research
# modules) imports beyond the base deps. CI installs ".[dev,research]":
#   - pyarrow: lake parquet IO + pandas.read_parquet (also snapshot_store tests)
#   - duckdb: research/lake reader/schema
#   - scipy: scorer/dsr.py, lab/strategies/reactions.py
#   - matplotlib: research/nba_odds_study (imported by evaluator scripts that
#     tests/test_venue_fees_golden.py exercises in a subprocess)
#   - scikit-learn: lab/eda.py clustering (soft-optional in code, but installed
#     so CI exercises the real path rather than the fallback)
research = [
    "pyarrow>=12.0.0",
    "duckdb>=0.9.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.3.0",
]
# Optional LLM tiebreaker for the genuinely-ambiguous matching residue. Absent
# this extra (and an ANTHROPIC_API_KEY), the deterministic verifier is used
# unchanged — the tiebreaker no-ops gracefully.
llm = ["anthropic>=0.40.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
# Installs a `kalshi-arb` command on PATH after `pip install -e .`
kalshi-arb = "kalshi_arbitrage.cli:main"

[tool.setuptools]
# Top-level modules + packages that ship with the project.
# venue_fees is the canonical fee schedule shared by kalshi_arbitrage AND
# research/* (stdlib-only top-level module: research is not shipped, and
# research must stay importable without aiohttp, so neither can host it).
py-modules = ["arbitrage_analyzer", "venue_fees"]

[tool.setuptools.packages.find]
include = ["kalshi_arbitrage*", "tools*"]
exclude = ["research*", "tests*", "market_data*", "debug*", "nba_odds_study*"]
